# destop-pet

./: API.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.sidecar.json  vite.config.ts
.cursor/rules/: gemini-api-usage.mdc  live2d-implementation-guide.mdc  tauri-2-best-practices.mdc
doc/: Live2D桌面宠物使用说明.md  研发记录.md  错误修复说明.md
src/: App.css  App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api_server.rs  lib.rs  main.rs
src/components/: ErrorBoundary.tsx  InteractiveDialog.css  InteractiveDialog.tsx  Live2DViewer.tsx  NotificationDialog.css  NotificationDialog.tsx  SimpleLive2DDemo.tsx
src/hooks/: useMcpSocket.ts
src/lapp/: lappdefine.ts  lappdelegate.ts  lapplive2dmanager.ts  lappmodel.ts  lappview.ts
src/live2d/: LAppDefine.ts  LAppDelegate.ts  LAppGlManager.ts  LAppModel.ts  LAppPal.ts  LAppSubdelegate.ts  LAppTextureManager.ts  LAppView.ts
src/live2d-framework/: live2dcubismframework.ts
src/mcp-server/: index.ts  tools.ts
src/pages/: MainPage.module.css  MainPage.tsx
src/services/: InteractiveService.ts
src/types/: live2d.d.ts
